Se añade monto por forma de pago

--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
                             <input type="text" class="form-control" id="fecha">
                         </div>
                         <div class="col-md-1">
-                            <span class="btn btn-outline-success" onclick="reporte_fecha();"><i class="fa fa-search"></i></span>
+                            <span class="btn btn-outline-success" onclick="reporte_fecha();"><i
+                                    class="fa fa-search"></i></span>
                         </div>
                         <hr class="w-100">
                         <!-- Earnings (Monthly) Card Example -->
@@ -297,6 +298,55 @@
                             </div>
                         </div>-->
                     </div>
+                    <div class="row">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <div class="form-row">
+                                    <div class="col-md-1">
+                                        <img src="img/yape.png" alt="" srcset="" class="w-50">
+                                    </div>
+                                    <div class="col-md-11">
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="yape_ahora">
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="list-group-item">
+                                <div class="form-row">
+                                    <div class="col-md-1">
+                                        <img src="img/plin.png" alt="" srcset="" class="w-50">
+                                    </div>
+                                    <div class="col-md-11">
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="plin_ahora">
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="list-group-item">
+                                <div class="form-row">
+                                    <div class="col-md-1">
+                                        <img src="img/efectivo.jpg" alt="" srcset="" class="w-50">
+                                    </div>
+                                    <div class="col-md-11">
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="efectivo_ahora">
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="list-group-item">
+                                <div class="form-row">
+                                    <div class="col-md-1">
+                                        <img src="img/saldo.png" alt="" srcset="" class="w-50">
+                                    </div>
+                                    <div class="col-md-11">
+                                        <div class="h5 mb-0 font-weight-bold text-gray-800" id="saldo_ahora">
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
                 <!-- /.container-fluid -->
 
