--- a/categorias.html
+++ b/categorias.html
@@ -95,7 +95,6 @@
                     <div class="bg-brown py-2 collapse-inner rounded">
                         <a class="collapse-item" href="venta.html">Nueva Venta</a>
                         <a class="collapse-item" href="ventas.html">Lista Ventas</a>
-                        <a class="collapse-item" href="movimientos.html">Movimientos</a>
                     </div>
                 </div>
             </li>
@@ -116,8 +115,10 @@
                 </a>
                 <div id="collapseStock" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="abastecer_manual.html">Abastecer Manual</a>
                         <a class="collapse-item" href="abastecer.html">Abastecer Sucursal</a>
                         <a class="collapse-item" href="stock.html">Stock Actual</a>
+                        <a class="collapse-item" href="movimientos.html">Movimientos</a>
                     </div>
                 </div>
             </li>
