--- a/gastos.html
+++ b/gastos.html
@@ -23,7 +23,10 @@
 
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/build/jquery.datetimepicker.min.css"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css">
 </head>
 
 <body id="page-top">
@@ -63,7 +66,8 @@
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Control</span>
                 </a>
-                <div id="collapsePages" class="collapse show" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                <div id="collapsePages" class="collapse show" aria-labelledby="headingPages"
+                    data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
                         <a class="collapse-item" href="sucursales.html">Sucursales</a>
                         <a class="collapse-item" href="usuarios.html">Usuarios</a>
@@ -86,8 +90,8 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS"
-                    aria-expanded="true" aria-controls="collapsePOS">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapsePOS" aria-expanded="true"
+                    aria-controls="collapsePOS">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Ventas</span>
                 </a>
@@ -108,13 +112,14 @@
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseStock"
-                    aria-expanded="true" aria-controls="collapseStock">
+                <a class="nav-link" href="#" data-toggle="collapse" data-target="#collapseStock" aria-expanded="true"
+                    aria-controls="collapseStock">
                     <i class="fas fa-fw fa-folder"></i>
                     <span>Stocks</span>
                 </a>
                 <div id="collapseStock" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
                     <div class="bg-brown py-2 collapse-inner rounded">
+                        <a class="collapse-item" href="abastecer_manual.html">Abastecer Manual</a>
                         <a class="collapse-item" href="abastecer.html">Abastecer Sucursal</a>
                         <a class="collapse-item" href="stock.html">Stock Actual</a>
                         <a class="collapse-item" href="movimientos.html">Movimientos</a>
@@ -140,7 +145,8 @@
             <div id="content">
 
                 <!-- Topbar -->
-                <nav class="navbar navbar-expand navbar-light bg-brown-alt topbar mb-4 static-top shadow" style="box-shadow: 0px 2px 8px 2px #313131 !important;">
+                <nav class="navbar navbar-expand navbar-light bg-brown-alt topbar mb-4 static-top shadow"
+                    style="box-shadow: 0px 2px 8px 2px #313131 !important;">
 
                     <!-- Sidebar Toggle (Topbar) -->
                     <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
@@ -192,8 +198,30 @@
                     <div class="row">
                         <div class="col-md-12 text-right mb-3">
                             <span class="btn btn-outline-primary btn-rounded" data-toggle="modal"
-                                data-target="#formulario" onclick="nuevo_gasto();"><i class="fa fa-plus"></i> Nuevo Gasto</span>
+                                data-target="#formulario" onclick="nuevo_gasto();"><i class="fa fa-plus"></i> Nuevo
+                                Gasto</span>
                         </div>
+                        <div class="row w-100">
+                            <div class="col-md-5">
+                                <label for="">Fecha Desde</label>
+                            </div>
+                            <div class="col-md-5">
+                                <label for="">Fecha Hasta</label>
+                            </div>
+                            <div class="col-md-2"></div>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control fecha" id="fecha_desde">
+                            </div>
+                            <div class="col-md-5">
+                                <input type="text" class="form-control fecha" id="fecha_hasta">
+                            </div>
+                            <div class="col-md-2">
+                                <span class="btn btn-outline-success" onclick="lista_gastos();">
+                                    <i class="fa fa-search"></i>
+                                </span>
+                            </div>
+                        </div>
+                        <hr class="w-100">
                         <div class="table-response w-100">
                             <table class="table table-bordered table-striped" id="tabla-gastos">
                                 <thead>
@@ -282,7 +310,16 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css" />
     <!-- Default theme -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css" />
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.4/jquery.datetimepicker.full.min.js"></script>
+    <!-- DataTables 1.13.x -->
+    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
 
+    <!-- Extensión Buttons compatible con DataTables 1.x -->
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
+    <script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
     <script src="js/util.js"></script>
     <script src="js/gastos.js"></script>
 </body>
