Se añade funcionalidad de precio fijo

--- a/productos.html
+++ b/productos.html
@@ -200,6 +200,7 @@
                                 <thead>
                                     <th>Id</th>
                                     <th>Producto</th>
+                                    <th>Precio</th>
                                     <th>Categoría</th>
                                     <th width="5%"></th>
                                 </thead>
@@ -246,7 +247,12 @@
                             <label for="producto">Producto</label>
                             <input type="text" class="form-control" id="producto">
                         </div>
-                        <div class="col-md-12">
+
+                        <div class="col-md-6">
+                            <label for="precio_unitario">Precio</label>
+                            <input type="text" class="form-control" id="precio_unitario">
+                        </div>
+                        <div class="col-md-6">
                             <label for="id_categoria">Categoría</label>
                             <select name="" id="id_categoria" class="form-control">
                                 <option value="0">--SELECCIONE--</option>
