--- a/abastecer_manual.html
+++ b/abastecer_manual.html
@@ -194,10 +194,10 @@
                             <div class="form-group col-md-3 my-2">
                                 <label>Seleccionar Sucursal</label>
                             </div>
-                            <div class="form-group col-md-4 my-2">
+                            <div class="form-group col-md-6 my-2">
                                 <label for="producto">Producto</label>
                             </div>
-                            <div class="form-group col-md-2 my-2">
+                            <div class="form-group col-md-2 my-2" hidden>
                                 <label for="precio_unitario">Precio Unitario</label>
                             </div>
                             <div class="form-group col-md-2 my-2">
@@ -212,14 +212,14 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="form-group col-md-4 my-2">
+                            <div class="form-group col-md-6 my-2">
                                 <div class="input-group mb-3" style="display: flex;">
                                     <input type="text" class="form-control" id="producto">
                                 </div>
                             </div>
-                            <div class="form-group col-md-2 my-2">
+                            <div class="form-group col-md-2 my-2" hidden>
                                 <div class="input-group mb-3" style="display: flex;">
-                                    <input type="text" class="form-control" id="precio_unitario">
+                                    <input type="hidden" class="form-control" id="precio_unitario">
                                 </div>
                             </div>
                             <div class="form-group col-md-2 my-2">
