--- a/gastos.html
+++ b/gastos.html
@@ -226,7 +226,7 @@
                                 <thead>
                                     <th>Id</th>
                                     <th>Concepto</th>
-                                    <th>monto</th>
+                                    <th>Monto</th>
                                     <th>Sucursal</th>
                                     <th>Fecha</th>
                                     <th width="5%"></th>
@@ -270,9 +270,13 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             <label for="concepto">Concepto</label>
                             <input type="text" class="form-control" id="concepto">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="fecha">Fecha</label>
+                            <input type="text" class="form-control fecha" id="fecha">
                         </div>
                         <div class="col-md-6">
                             <label for="monto">Monto</label>
